--- a/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/app/src/main/res/menu/nav_drawer_menu.xml
@@ -3,12 +3,12 @@
 
     <item
             android:id="@+id/nav_press"
-            android:title="-Press play button to start a new game" />
+            android:title="-Press play button to start" />
     <item
         android:id="@+id/nav_decide"
         android:title="-Decide on the amount of your bet" />
     <item
         android:id="@+id/nav_confirm"
-        android:title="-Confirm bet by pressing button to deal cards" />
+        android:title="-Confirm bet by pressing button" />
 
 </menu>
